--- a/workOut/Base.lproj/Main.storyboard
+++ b/workOut/Base.lproj/Main.storyboard
@@ -28,8 +28,28 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Labelfjgl;df" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vk-2u-y1D">
-                                                    <rect key="frame" x="16" y="11" width="86" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="WorkOutについて" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vk-2u-y1D">
+                                                    <rect key="frame" x="16" y="11" width="138" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="4df-gX-HGM" kind="show" id="VCU-pu-7hC"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="JU0-wx-uKM">
+                                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JU0-wx-uKM" id="vHd-C7-Kr3">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZt-bP-szJ">
+                                                    <rect key="frame" x="16" y="12" width="42" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -38,20 +58,21 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="JU0-wx-uKM">
-                                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JU0-wx-uKM" id="vHd-C7-Kr3">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="2uK-9W-iaW">
                                         <rect key="frame" x="0.0" y="88" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2uK-9W-iaW" id="t8L-0H-ddF">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fph-cN-9Y7">
+                                                    <rect key="frame" x="16" y="11" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -66,7 +87,23 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ahU-nm-wg2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-154" y="1444"/>
+            <point key="canvasLocation" x="-148" y="1816"/>
+        </scene>
+        <!--WorkOutについて-->
+        <scene sceneID="Sbz-Mc-oK6">
+            <objects>
+                <viewController id="4df-gX-HGM" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="d8K-ag-aaP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Nej-w8-hxW"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="WorkOutについて" id="xwS-cG-x5M"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gK8-f4-Mj3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="806" y="1816"/>
         </scene>
         <!--WorkoutMusic-->
         <scene sceneID="epf-qT-2bx">
@@ -661,7 +698,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i1W-rZ-OLF">
-                                        <rect key="frame" x="111" y="20" width="57" height="36"/>
+                                        <rect key="frame" x="111" y="23" width="57" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="vq6-uX-7ap"/>
                                         </constraints>
@@ -1664,7 +1701,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="WfX-ab-0id">
-                                <rect key="frame" x="0.0" y="203" width="375" height="216"/>
+                                <rect key="frame" x="0.0" y="237" width="375" height="216"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="375" id="Gsv-UE-txm"/>
                                     <constraint firstAttribute="height" constant="216" id="TUn-z6-l5u"/>
@@ -1674,20 +1711,20 @@
                                 </date>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日付を選択して下さい" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3OG-8Y-c0G">
-                                <rect key="frame" x="60" y="82" width="255" height="28"/>
+                                <rect key="frame" x="60" y="116" width="255" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="B6Z-x6-ULR"/>
                                     <constraint firstAttribute="width" constant="255" id="uxr-7W-D6U"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <color key="textColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="スケジュールを記入" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Smu-Py-1Aw">
-                                <rect key="frame" x="16" y="137" width="343" height="30"/>
+                                <rect key="frame" x="16" y="181" width="343" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="ZiZ-xa-Uuj"/>
                                     <constraint firstAttribute="width" constant="343" id="tq9-dJ-9Kc"/>
+                                    <constraint firstAttribute="height" constant="40" id="yq1-89-SlT"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -1711,18 +1748,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="WfX-ab-0id" firstAttribute="top" secondItem="Smu-Py-1Aw" secondAttribute="bottom" constant="36" id="43B-sa-kxt"/>
                             <constraint firstItem="WfX-ab-0id" firstAttribute="trailing" secondItem="n0U-vJ-pfS" secondAttribute="trailing" id="Hl3-Yl-v8Q"/>
                             <constraint firstItem="n0U-vJ-pfS" firstAttribute="trailing" secondItem="3OG-8Y-c0G" secondAttribute="trailing" constant="60" id="INw-oE-Obh"/>
                             <constraint firstItem="n0U-vJ-pfS" firstAttribute="trailing" secondItem="Smu-Py-1Aw" secondAttribute="trailing" constant="16" id="Jg6-EX-gyI"/>
-                            <constraint firstItem="3OG-8Y-c0G" firstAttribute="top" secondItem="n0U-vJ-pfS" secondAttribute="top" constant="18" id="TH6-EE-kMe"/>
+                            <constraint firstItem="3OG-8Y-c0G" firstAttribute="top" secondItem="n0U-vJ-pfS" secondAttribute="top" constant="52" id="TH6-EE-kMe"/>
                             <constraint firstItem="n0U-vJ-pfS" firstAttribute="trailing" secondItem="pc8-ac-urO" secondAttribute="trailing" constant="16" id="aMK-tP-9n6"/>
                             <constraint firstItem="3OG-8Y-c0G" firstAttribute="leading" secondItem="n0U-vJ-pfS" secondAttribute="leading" constant="60" id="bc8-FF-XZm"/>
                             <constraint firstItem="WfX-ab-0id" firstAttribute="leading" secondItem="n0U-vJ-pfS" secondAttribute="leading" id="eA2-WW-ZJW"/>
                             <constraint firstItem="pc8-ac-urO" firstAttribute="leading" secondItem="n0U-vJ-pfS" secondAttribute="leading" constant="16" id="fag-9Y-4qb"/>
                             <constraint firstItem="Smu-Py-1Aw" firstAttribute="leading" secondItem="n0U-vJ-pfS" secondAttribute="leading" constant="16" id="h5y-rc-jh8"/>
                             <constraint firstItem="n0U-vJ-pfS" firstAttribute="bottom" secondItem="pc8-ac-urO" secondAttribute="bottom" constant="59" id="kMO-Gw-ZER"/>
-                            <constraint firstItem="Smu-Py-1Aw" firstAttribute="top" secondItem="3OG-8Y-c0G" secondAttribute="bottom" constant="27" id="srV-9x-vaP"/>
+                            <constraint firstItem="pc8-ac-urO" firstAttribute="top" secondItem="WfX-ab-0id" secondAttribute="bottom" constant="58" id="sHv-E7-LLA"/>
+                            <constraint firstItem="Smu-Py-1Aw" firstAttribute="top" secondItem="3OG-8Y-c0G" secondAttribute="bottom" constant="37" id="srV-9x-vaP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="n0U-vJ-pfS"/>
                     </view>
