--- a/workOut/Base.lproj/Main.storyboard
+++ b/workOut/Base.lproj/Main.storyboard
@@ -124,34 +124,37 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lax-vh-nxL">
-                                <rect key="frame" x="149" y="558" width="77" height="30"/>
+                                <rect key="frame" x="117" y="565" width="141" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.33607184531931922" blue="0.38861066596123284" alpha="0.85057255995753411" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="5pN-Q7-RNe"/>
-                                    <constraint firstAttribute="width" constant="77" id="Ih3-Jj-Vs7"/>
+                                    <constraint firstAttribute="width" constant="141" id="Ih3-Jj-Vs7"/>
                                 </constraints>
-                                <state key="normal" title="選曲画面へ"/>
+                                <state key="normal" title="選曲画面へ">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="pick:" destination="yj2-BC-8Qc" eventType="touchUpInside" id="Zhq-ZU-gxA"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBM-lB-rGk">
-                                <rect key="frame" x="291" y="495" width="31" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBM-lB-rGk">
+                                <rect key="frame" x="271" y="495" width="31" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="H9K-QO-lX3"/>
                                     <constraint firstAttribute="width" constant="31" id="Jz1-w4-ZaQ"/>
                                 </constraints>
-                                <state key="normal" title="次へ"/>
+                                <state key="normal" title="次へ" image="iconmonstr-media-control-30-64"/>
                                 <connections>
                                     <action selector="next:" destination="yj2-BC-8Qc" eventType="touchUpInside" id="goG-sx-ybp"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5HH-ol-KBU">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5HH-ol-KBU">
                                 <rect key="frame" x="64" y="495" width="31" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="31" id="TEe-QY-nWP"/>
                                     <constraint firstAttribute="height" constant="30" id="cUj-47-lIW"/>
                                 </constraints>
-                                <state key="normal" title="前へ"/>
+                                <state key="normal" title="前へ" image="iconmonstr-media-control-34-32"/>
                                 <connections>
                                     <action selector="back:" destination="yj2-BC-8Qc" eventType="touchUpInside" id="AZO-Ge-KLY"/>
                                 </connections>
@@ -167,12 +170,13 @@
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Rl-SR-5A0">
-                                <rect key="frame" x="163" y="478" width="49" height="64"/>
+                                <rect key="frame" x="172" y="474" width="76" height="73"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="XQf-wY-yVU"/>
-                                    <constraint firstAttribute="width" constant="49" id="i7I-Xo-ncp"/>
+                                    <constraint firstAttribute="height" constant="73" id="XQf-wY-yVU"/>
+                                    <constraint firstAttribute="width" constant="76" id="i7I-Xo-ncp"/>
                                 </constraints>
-                                <state key="normal" title="Button" image="play.png"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Button" image="icon48"/>
                                 <connections>
                                     <action selector="play:" destination="yj2-BC-8Qc" eventType="touchUpInside" id="W1I-57-7Z5"/>
                                 </connections>
@@ -183,39 +187,39 @@
                             <constraint firstItem="iuC-fq-Zj1" firstAttribute="top" secondItem="YEN-Jv-aZU" secondAttribute="bottom" constant="33" id="25x-Ql-pDV"/>
                             <constraint firstItem="5HH-ol-KBU" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="35" id="69s-XH-1Wx"/>
                             <constraint firstItem="YEN-Jv-aZU" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="16" id="9QS-Pv-FRF"/>
-                            <constraint firstItem="bBM-lB-rGk" firstAttribute="leading" secondItem="7Rl-SR-5A0" secondAttribute="trailing" constant="79" id="D33-U5-sUc"/>
+                            <constraint firstItem="bBM-lB-rGk" firstAttribute="leading" secondItem="7Rl-SR-5A0" secondAttribute="trailing" constant="23" id="D33-U5-sUc"/>
                             <constraint firstItem="ssB-44-b2E" firstAttribute="top" secondItem="7SJ-35-f1R" secondAttribute="top" constant="35" id="F82-S4-PNz"/>
                             <constraint firstItem="bBM-lB-rGk" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="35" id="GRa-6z-Lsb"/>
                             <constraint firstItem="iuC-fq-Zj1" firstAttribute="top" secondItem="YEN-Jv-aZU" secondAttribute="bottom" constant="33" id="Gas-2Q-WU5"/>
                             <constraint firstItem="iuC-fq-Zj1" firstAttribute="trailing" secondItem="7SJ-35-f1R" secondAttribute="trailing" id="IL3-rv-xeP"/>
-                            <constraint firstItem="lax-vh-nxL" firstAttribute="top" secondItem="7Rl-SR-5A0" secondAttribute="bottom" constant="16" id="Iz6-qE-GW9"/>
-                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="leading" secondItem="5HH-ol-KBU" secondAttribute="trailing" constant="68" id="Lnn-f3-haG"/>
+                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="leading" secondItem="5HH-ol-KBU" secondAttribute="trailing" constant="77" id="Lnn-f3-haG"/>
                             <constraint firstItem="IGg-zM-k46" firstAttribute="top" secondItem="iuC-fq-Zj1" secondAttribute="bottom" constant="14" id="NdB-eg-guM"/>
                             <constraint firstItem="5HH-ol-KBU" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="64" id="OOc-uB-wm3"/>
-                            <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="bBM-lB-rGk" secondAttribute="trailing" constant="53" id="OYq-xp-PaU"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="bBM-lB-rGk" secondAttribute="trailing" constant="73" id="OYq-xp-PaU"/>
                             <constraint firstItem="iuC-fq-Zj1" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" id="RUi-jM-w2N"/>
                             <constraint firstItem="ssB-44-b2E" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="16" id="Sxx-ap-aDx"/>
-                            <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="lax-vh-nxL" secondAttribute="trailing" constant="149" id="UcZ-gd-lus"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="lax-vh-nxL" secondAttribute="trailing" constant="117" id="UcZ-gd-lus"/>
                             <constraint firstItem="IGg-zM-k46" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="16" id="WxI-Ff-3E1"/>
                             <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="ssB-44-b2E" secondAttribute="trailing" constant="16" id="c0x-Hm-ho3"/>
                             <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="IGg-zM-k46" secondAttribute="trailing" constant="16" id="dIk-iH-iEJ"/>
-                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="18" id="eEl-OC-UXf"/>
-                            <constraint firstItem="lax-vh-nxL" firstAttribute="top" secondItem="7Rl-SR-5A0" secondAttribute="bottom" constant="16" id="eTj-cD-neC"/>
-                            <constraint firstItem="lax-vh-nxL" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="149" id="exE-1O-Cf6"/>
+                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="14" id="eEl-OC-UXf"/>
+                            <constraint firstItem="lax-vh-nxL" firstAttribute="leading" secondItem="7SJ-35-f1R" secondAttribute="leading" constant="117" id="exE-1O-Cf6"/>
+                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="centerX" secondItem="njh-CV-BSj" secondAttribute="centerX" constant="22.5" id="hiA-At-2Ki"/>
                             <constraint firstItem="7SJ-35-f1R" firstAttribute="trailing" secondItem="YEN-Jv-aZU" secondAttribute="trailing" constant="16" id="hqS-1L-qlW"/>
                             <constraint firstItem="7SJ-35-f1R" firstAttribute="bottom" secondItem="bBM-lB-rGk" secondAttribute="bottom" constant="93" id="kNE-wR-KEi"/>
-                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="18" id="l7Q-zB-AEV"/>
-                            <constraint firstItem="7SJ-35-f1R" firstAttribute="bottom" secondItem="lax-vh-nxL" secondAttribute="bottom" constant="30" id="ouD-JH-iqW"/>
+                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="top" secondItem="IGg-zM-k46" secondAttribute="bottom" constant="14" id="l7Q-zB-AEV"/>
+                            <constraint firstItem="7SJ-35-f1R" firstAttribute="bottom" secondItem="lax-vh-nxL" secondAttribute="bottom" constant="23" id="ouD-JH-iqW"/>
                             <constraint firstItem="YEN-Jv-aZU" firstAttribute="top" secondItem="ssB-44-b2E" secondAttribute="bottom" constant="13" id="s7m-Sw-X9F"/>
                             <constraint firstItem="7SJ-35-f1R" firstAttribute="bottom" secondItem="5HH-ol-KBU" secondAttribute="bottom" constant="93" id="sM9-Bx-TT0"/>
                             <constraint firstItem="IGg-zM-k46" firstAttribute="top" secondItem="iuC-fq-Zj1" secondAttribute="bottom" constant="14" id="wMJ-Fo-LMm"/>
-                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="leading" secondItem="5HH-ol-KBU" secondAttribute="trailing" constant="68" id="xmv-0k-mGb"/>
+                            <constraint firstItem="7Rl-SR-5A0" firstAttribute="leading" secondItem="5HH-ol-KBU" secondAttribute="trailing" constant="77" id="xmv-0k-mGb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7SJ-35-f1R"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="WorkoutMusic" image="iconmonstr-disc-5-32" id="rQJ-yX-HAv"/>
                     <connections>
                         <outlet property="artistname" destination="YEN-Jv-aZU" id="fE6-SX-7JH"/>
+                        <outlet property="changeMusic" destination="lax-vh-nxL" id="z40-R1-Pk9"/>
                         <outlet property="imageView" destination="iuC-fq-Zj1" id="pbM-7O-5Rg"/>
                         <outlet property="playButton" destination="7Rl-SR-5A0" id="QqJ-kX-JdN"/>
                         <outlet property="scrubBar" destination="IGg-zM-k46" id="DPE-ia-Ijj"/>
@@ -224,7 +228,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A1C-wn-Hjp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="807" y="1086"/>
+            <point key="canvasLocation" x="805.60000000000002" y="1085.3073463268368"/>
         </scene>
         <!--トレーニング詳細-->
         <scene sceneID="ANx-fK-fnX">
@@ -248,7 +252,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1b5-u3-eI7">
-                                        <rect key="frame" x="228" y="25" width="51" height="27"/>
+                                        <rect key="frame" x="228" y="25" width="51" height="26.5"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="26.5" id="Ogh-Zd-meA"/>
                                             <constraint firstAttribute="width" constant="51" id="oEY-O6-69v"/>
@@ -1929,10 +1933,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icon48" width="48" height="48"/>
         <image name="iconmonstr-calendar-4-32" width="48" height="48"/>
         <image name="iconmonstr-disc-5-32" width="48" height="48"/>
+        <image name="iconmonstr-media-control-30-64" width="48" height="48"/>
+        <image name="iconmonstr-media-control-34-32" width="48" height="48"/>
         <image name="iconmonstr-menu-thin-240" width="48" height="48"/>
         <image name="iconmonstr-time-6-32" width="48" height="48"/>
-        <image name="play.png" width="48" height="48"/>
     </resources>
 </document>
