--- a/workOut/Base.lproj/Main.storyboard
+++ b/workOut/Base.lproj/Main.storyboard
@@ -79,8 +79,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="ワークアウトは筋トレを愛する人に愛されるアプリでありたいと思います。" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fFJ-Ed-Cjz">
-                                <rect key="frame" x="16" y="102" width="343" height="107"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="ワークアウトは筋トレを愛する人に愛されるアプリであり続けます。" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fFJ-Ed-Cjz">
+                                <rect key="frame" x="16" y="102" width="343" height="113"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
